deploy/static/fanout-debug-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2019-07-06T19:57:22Z"
  name: fanout-debug-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web2
          servicePort: 8080
        path: /v2/*
